@@ -6,7 +6,7 @@ from pyramid.interfaces import IAuthenticationPolicy
 from pyramid.interfaces import IRendererFactory
 
 from pyramid.renderers import RendererHelper
-from pyramid.traversal import traversal_path
+from pyramid.traversal import traversal_path_info
 
 from pyramid.config.util import action_method
 
@@ -66,7 +66,7 @@ class TestingConfiguratorMixin(object):
             def __call__(self, request):
                 path = request.environ['PATH_INFO']
                 ob = resources[path]
-                traversed = traversal_path(path)
+                traversed = traversal_path_info(path)
                 return {'context':ob, 'view_name':'','subpath':(),
                         'traversed':traversed, 'virtual_root':ob,
                         'virtual_root_path':(), 'root':ob}
